Don't report CMS analysis if CMS collector is disabled.